--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -1,5 +1,12 @@
 @import './setting.scss';
 
+$panel-left-width: 12vw;
+$panel-center-width: 65vw;
+$navbar-test-height: 6vh;
+$quick-action-height: 6vh;
+$setting-button-width: 7vw;
+$answer-button-width: 32.5vw;
+
 body {
   margin: 0;
   font-family: 'Source Code Pro', sans-serif;
@@ -11,66 +18,85 @@ body {
   height: 100vh;
   overflow: hidden;
   background-color: rgba(165, 200, 230, 0.575);
+  align-items: center;
+  text-align: center;
 
   .navbar-test {
     font-size: 1.6rem;
-    height: 6vh;
+    height: $navbar-test-height;
     display: flex;
-    align-items: center;
 
     .logo {
       background-color: gray;
-      width: 12vw;
-      height: 6vh;
-      align-items: center;
-      text-align: center;
+      width: $panel-left-width;
+      height: $navbar-test-height;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .test-title {
-      width: 65vw;
-      height: 6vh;
-      align-items: center;
-      text-align: center;
+      width: $panel-center-width;
+      height: $navbar-test-height;
       display: flex;
+
+      > * {
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+      }
 
       .title {
         background-color: lightsalmon;
         width: 75%;
         height: 100%;
+
+        input[type="text"] {
+          outline: none !important;
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          font-size: 20px;
+          background-color: transparent;
+        }
       }
 
       .submit-title {
-        background-color: greenyellow;
-        width: 15%;
+        background-color: rgb(0, 153, 128);
+        color: white;
+        width: 25%;
         height: 100%;
+        cursor: pointer;
       }
     }
 
     .settings {
       width: 23vw;
-      height: 6vh;
-      align-items: center;
-      text-align: center;
+      height: $navbar-test-height;
       display: flex;
+
+      > * {
+        color: white;
+        height: 100%;
+        width: $setting-button-width;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+        margin-left: 0.3vw;
+        margin-right: 0.3vw;
+      }
 
       .preview-test {
         background-color: #c83adb;
-        width: 7vw;
-        height: 100%;
       }
 
       .save-test {
-        background-color: #bb1616;
-        width: 7vw;
-        height: 100%;
-        margin-left: 1vw;
-        margin-right: 1vw;
+        background-color: #0646d1;
       }
 
       .exit-test {
-        background-color: #3a995f;
-        width: 7vw;
-        height: 100%;
+        background-color: #bb1616;
       }
     }
   }
@@ -80,7 +106,7 @@ body {
 
     .panel-left {
       background-color: gainsboro;
-      width: 12vw;
+      width: $panel-left-width;
 
       .questions-preview {
         height: 88vh;
@@ -88,7 +114,7 @@ body {
       }
 
       .question-actions {
-        height: 10vh;
+        height: $quick-action-height;
         background-color: lightcyan;
 
         .add-question {
@@ -96,38 +122,73 @@ body {
           width: 100%;
           border: none;
           background-color: #04AA6D;
+          color: white;
+          font-weight: bold;
           padding: 14px 28px;
           font-size: 16px;
           cursor: pointer;
-          text-align: center;
           text-transform: uppercase;
         }
       }
     }
 
     .panel-center {
-      width: 65vw;
+      width: $panel-center-width;
+
+      > * {
+        font-weight: bold;
+      }
 
       .question-content {
         width: 100%;
         background-color: lightcoral;
-        height: 20vh;
+        height: 14vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
       .question-embed {
-        height: 42vh;
+        height: 50vh;
+        width: 100%;
+
+        img {
+          height: 100%;
+        }
       }
 
       .question-answers {
         width: 100%;
-        background-color: lightpink;
-        height: 32vh;
+        height: 30vh;
         display: grid;
+        grid-template-columns: $answer-button-width $answer-button-width;
+        grid-row: auto auto;
 
-        .answers {
-          background-color: lightseagreen;
-          width: 32vw;
-          height: 16vh;
+        .answer {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: left !important;
+          text-align: left;
+          background-color: rgb(255, 65, 173);  
+
+          > * {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+          }
+
+          .answer-icon {
+            background-color: #04AA6D;
+            width: 10%;
+            height: 100%;
+          }
+
+          .answer-content {
+            width: 90%;
+          }
         }
       }
     }
@@ -141,16 +202,24 @@ body {
       }
 
       .quick-actions {
-        height: 10vh;
-        background-color: lightcyan;
+        height: $quick-action-height;
         display: flex;
 
-        .delete-question {
+        > * {
           width: 50%;
+          text-transform: uppercase;
+          cursor: pointer;
+          color: white;
+          font-weight: bold;
+          border: none;
+        }
+
+        .delete-question {
+          background-color: red;
         }
 
         .duplicate-question {
-          width: 50%;
+          background-color: goldenrod;
         }
       }
     }
