--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -1,26 +1,4 @@
-@import './setting.scss';
-
-$gap: 10px;
-$panel-left-width: 12vw;
-$panel-center-width: 65vw;
-$navbar-test-height: 6vh;
-$quick-action-height: 6vh;
-$setting-button-width: 7vw;
-$answer-button-width: 32.5vw;
-$question-number-width: 3rem;
-$question-content-background: rgba(228, 241, 241, 0.877);
-$question-item-preview-content-background: #cf768b;
-$question-attribute-setting-height: 80px;
-$question-attribute-setting-background: #9dd8d0a9;
-$answer-background-color: white;
-$list-bg-color: #ebecf0;
-$select-color: rgb(11, 9, 126);
-$select-background: #dfbdae85;
-$select-width: 100%;
-$select-height: 40px; 
-$btn-check-size: 2rem;
-$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-$question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+@import '_setting.scss';
 
 body {
   margin: 0;
@@ -39,394 +17,4 @@ button {
   background-color: rgba(165, 200, 230, 0.575);
   align-items: center;
   text-align: center;
-
-  .navbar-test {
-    font-size: 1.6rem;
-    height: $navbar-test-height;
-    display: flex;
-
-    .logo {
-      width: $panel-left-width;
-      height: $navbar-test-height;
-      
-    }
-
-    .test-title {
-      width: $panel-center-width;
-      height: $navbar-test-height;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-
-      > * {
-        text-transform: uppercase;
-        font-weight: bold;
-        border: none;
-      }
-
-      .title {
-        background-color: lightsalmon;
-        height: 100%;
-
-        input[type="text"] {
-          outline: none !important;
-          width: 100%;
-          height: 100%;
-          text-align: center;
-          font-size: 20px;
-          background-color: transparent;
-        }
-      }
-
-      .submit-title {
-        background-color: rgb(0, 153, 128);
-        color: white;
-        width: 5%;
-        height: 100%;
-        cursor: pointer;
-        margin-left: $gap;
-        margin-right: $gap;
-      }
-    }
-
-    .settings {
-      width: 23vw;
-      height: $navbar-test-height;
-      display: flex;
-
-      > * {
-        color: white;
-        height: 100%;
-        width: $setting-button-width;
-        cursor: pointer;
-        text-transform: uppercase;
-        font-weight: bold;
-        border: none;
-        margin-left: 0.3vw;
-        margin-right: 0.3vw;
-      }
-
-      .preview-test {
-        background-color: #c83adb;
-      }
-
-      .save-test {
-        background-color: #0646d1;
-      }
-
-      .exit-test {
-        background-color: #bb1616;
-      }
-    }
-  }
-
-  .container {
-    display: flex;
-
-    .panel-left {
-      background-color: gainsboro;
-      width: $panel-left-width;
-
-      .questions-preview-title {
-        text-transform: uppercase;
-        background-color: #cf972e;
-        color: white;
-        font-weight: bold;
-        height: 5vh;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .questions-preview {
-        height: 80vh;
-        overflow-x: hidden;
-        overflow-y: auto;
-
-        &::-webkit-scrollbar {
-            -webkit-appearance: none;
-        }
-
-        &::-webkit-scrollbar:vertical {
-            width: 11px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background-color: darken($color: $list-bg-color, $amount: 15);
-            border-right: 5px solid $list-bg-color;
-        }
-
-        .question-item-preview {
-          height: 8vw;
-          box-shadow: $box-shadow;
-          margin: $gap;
-
-          .question-item-preview-number {
-            background-color: goldenrod;
-            height: 1vw;
-            color: white;
-            font-weight: bold;
-          }
-
-          .question-item-preview-content {
-            background-color: $question-item-preview-content-background;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            height: 7vw;
-          }
-        }
-      }
-
-      .question-actions {
-        height: $quick-action-height;
-        background-color: lightcyan;
-
-        .add-question {
-          display: block;
-          width: 100%;
-          border: none;
-          background-color: #04AA6D;
-          color: white;
-          font-weight: bold;
-          padding: 14px 28px;
-          font-size: 16px;
-          cursor: pointer;
-          text-transform: uppercase;
-        }
-      }
-    }
-
-    .panel-center {
-      width: $panel-center-width;
-
-      > * {
-        font-weight: bold;
-      }
-
-      .question {
-        width: 96%;
-        height: 20vh;
-        background-color: $question-content-background;
-        box-shadow: $question-box-shadow;
-        z-index: 1;
-        margin-left: $gap * 2;
-        margin-right: $gap * 2;
-        margin-top: $gap;
-        border-radius: $gap;
-        display: flex;
-        flex-direction: row;
-
-        > * {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-        }
-
-        .question-number {
-          height: 40px;
-          margin: 5px;
-          border-radius: $gap;
-          width: $question-number-width;
-          background-color: rgba(233, 111, 111, 0.5);
-        }
-
-        .question-content {
-          width: 100%;
-          margin-right: $question-number-width;
-        }
-      }
-
-      .question-embed {
-        height: 50vh;
-        width: 100%;
-
-        img {
-          height: 97%;
-          margin: $gap;
-        }
-      }
-
-      .question-answers {
-        width: 100%;
-        height: 24vh;
-        display: grid;
-        grid-template-columns: $answer-button-width $answer-button-width;
-        grid-row: auto auto;
-
-        .answer {
-          width: 98%;
-          height: 90%;
-          display: flex;
-          flex-direction: row;
-          justify-content: left !important;
-          text-align: left;
-          background-color: $answer-background-color;  
-          margin: $gap;
-
-          > * {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: center;
-          }
-
-          .answer-icon {
-            background-color: #04AA6D;
-            color: rgb(206, 226, 223);
-            width: 10%;
-            height: 100%;
-            font-size: 2rem;
-          }
-
-          .answer-content {
-            width: 80%;
-          }
-
-          .answer-checkbox {
-            width: 10%;
-            background-color: #e1e42a;
-            align-items: center;
-
-            .btn-checkbox {
-              background-color: transparent;
-              border: 0.25rem solid rgb(255, 255, 255);
-              flex: 0 0 auto;
-              width: $btn-check-size;
-              height: $btn-check-size;
-              padding: $gap;
-              transform-origin: center bottom;
-              box-shadow: transparent 0px 0px 0px 0.125rem;
-              border-radius: 50%;
-              cursor: pointer;
-            }
-          }
-        }
-      }
-    }
-
-    .panel-right {
-      width: 23vw;
-      padding: 10px;
-
-      .attributes {
-        height: 86vh;
-
-        > * {
-          background-color: $question-attribute-setting-background;
-          margin-top: $gap;
-          margin-bottom: $gap;
-          font-weight: bold;
-          font-size: 20px;
-          padding: $gap;
-          height: $question-attribute-setting-height;
-        }
-
-        .question-type {
-          height: 70px;
-
-          > * {
-            width: 100%;
-            margin-top: $gap/2;
-            margin-bottom: $gap/2;
-          }
-        }
-
-        .question-time-limit {
-          > * {
-            width: 100%;
-            margin-top: $gap/2;
-            margin-bottom: $gap/2;
-          }
-        }
-
-        .question-points {
-          > * {
-            width: 100%;
-            margin-top: $gap/2;
-            margin-bottom: $gap/2;
-          }
-        }
-
-        .question-music {
-          height: $question-attribute-setting-height*2;
-
-          > * {
-            width: 100%;
-            margin-top: $gap/2;
-            margin-bottom: $gap/2;
-          }
-        }
-
-        .question-answer-option {
-          height: $question-attribute-setting-height*2;
-
-          > * {
-            width: 100%;
-            margin-top: $gap/2;
-            margin-bottom: $gap/2;
-          }
-        }
-
-        .select {
-          cursor: pointer;
-          display: inline-block;
-          position: relative;
-          font-size: 16px;
-          color: $select-color;
-          width: $select-width;
-          height: $select-height;
-          background-color: darken($select-background, 2);
-          text-transform: uppercase;
-          font-weight: bold;
-          text-align: center;
-          border-radius: 8px;
-
-          &::-ms-expand {
-            display: none;
-          }
-
-          &:hover::after {
-            color: #f39c12;
-          }
-          
-          &::after {
-            content: '\25BC';
-            position: absolute;
-            top: 0;
-            right: 0;
-            padding: 1em;
-            background-color: #34495e;
-            transition: .25s all ease;
-            pointer-events: none;
-          }
-        }
-      }
-
-      .quick-actions {
-        height: $quick-action-height;
-        display: flex;
-
-        > * {
-          width: 50%;
-          text-transform: uppercase;
-          cursor: pointer;
-          color: white;
-          font-weight: bold;
-          border: none;
-        }
-
-        .delete-question {
-          background-color: red;
-        }
-
-        .duplicate-question {
-          background-color: goldenrod;
-        }
-      }
-    }
-  }
 }
