--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -1,1 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600');
+
+$gap: 10px;
+$quick-action-height: 6vh;
+$panel-left-width: 12vw;
+$panel-center-width: 65vw;
+$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+$bg-color: #ebecf0;
