--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -3,6 +3,8 @@
 $gap: 10px;
 $quick-action-height: 6vh;
 $panel-left-width: 12vw;
-$panel-center-width: 65vw;
-$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+$panel-center-width: 86vw;
+$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+             rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 $bg-color: #ebecf0;
+$app-bg-color: rgba(165, 200, 230, 0.575);
