--- a/clients/src/components/multi-choices/navbar/Navbar.scss
+++ b/clients/src/components/multi-choices/navbar/Navbar.scss
@@ -1,12 +1,13 @@
 @import '_setting.scss';
 
-$navbar-test-height: 6vh;
+$navbar-test-height: 5vh;
 $setting-button-width: 7vw;
 
 .navbar-test {
     font-size: 1.6rem;
     height: $navbar-test-height;
     display: flex;
+    padding-top: 6px;
 
     .logo {
         width: $panel-left-width;
@@ -31,13 +32,18 @@ $setting-button-width: 7vw;
             background-color: lightsalmon;
             height: 100%;
 
-            input[type="text"] {
+            .test-title-input {
                 outline: none !important;
                 width: 100%;
                 height: 100%;
                 text-align: center;
                 font-size: 20px;
                 background-color: transparent;
+                border: none !important;
+            }
+
+            input:focus, textarea:focus, select:focus{
+                outline: none;
             }
         }
 
