--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600');
 
 $gap: 10px;
-$quick-action-height: 6vh;
+$quick-action-height: 5vh;
 $panel-left-width: 12vw;
 $panel-center-width: 86vw;
-$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-             rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+$box-shadow: rgba(0, 0, 0, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
-$app-bg-color: rgba(165, 200, 230, 0.575);
+$app-bg-color: rgba(215, 233, 248, 0.575);
