drag and drop question preview

--- a/clients/src/components/multi-choices/panelLeft/PanelLeft.scss
+++ b/clients/src/components/multi-choices/panelLeft/PanelLeft.scss
@@ -33,6 +33,17 @@
             background-color: darken($color: $bg-color, $amount: 15);
             border-right: 5px solid $bg-color;
         }
+
+        .card-ghost {
+            transition: transform 0.18s ease;
+            transform: rotateZ(2deg);
+            font-weight: bold;
+        }
+
+        .card-ghost-drop {
+            transition: transform 0.18s ease-in-out;
+            transform: rotateZ(0deg);
+        }
     }
 
     .question-actions {
