--- a/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
+++ b/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
@@ -5,6 +5,7 @@ $question-item-preview-content-background: #9cdbe0bb;
 .question-item-preview {
     box-shadow: $box-shadow;
     margin: $gap;
+    cursor: move;
 
     .question-item-preview-number {
         background-color: goldenrod;
@@ -18,6 +19,6 @@ $question-item-preview-content-background: #9cdbe0bb;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        height: 5vw;
+        height: 7vw;
     }
 }
