--- a/clients/src/components/multi-choices/answer/Answer.scss
+++ b/clients/src/components/multi-choices/answer/Answer.scss
@@ -1,6 +1,6 @@
 @import '_setting.scss';
 
-$answer-button-width: 36vw;
+$answer-button-width: 50%;
 $answer-background-color: white;
 $btn-check-size: 2rem;
 
@@ -44,12 +44,25 @@ $btn-check-size: 2rem;
             width: 10%;
             align-items: center;
 
+            .lenght-limit {
+                font-size: 12px;
+                text-align: right;
+                font-weight: normal;
+                margin-top: 0;
+                display: inline-block;
+                color: gray;
+                width: 100%;
+                padding-right: 5px;
+            }
+            
             .btn-checkbox {
                 background-color: transparent;
                 border: 0.25rem solid rgb(255, 255, 255);
                 flex: 0 0 auto;
                 width: $btn-check-size;
                 height: $btn-check-size;
+                margin-bottom: 45%;
+                margin-top: 20%;
                 padding: $gap;
                 transform-origin: center bottom;
                 box-shadow: transparent 0px 0px 0px 0.125rem;
