--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -1,12 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
 @import '_setting.scss';
 
-$question-content-background: rgba(228, 241, 241, 0.877);
+$question-content-background: white;
 $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 
 .question {
     width: 96%;
-    height: 20vh;
+    height: 15vh;
     background-color: $question-content-background;
     box-shadow: $box-shadow;
     z-index: 1;
@@ -14,41 +14,35 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     margin-right: $gap * 2;
     margin-top: $gap;
     border-radius: $gap;
-    line-height: 1.5rem;
+    line-height: 1.2rem;
     display: flex;
     flex-direction: row;
-
-    >* {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
 
     .question-content {
         width: 100%;
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
 
-        .question-content-input {
-            display: table-cell !important;
-            vertical-align: middle !important;
+        .textarea-enter {
             font-size: 18px;
+            margin-bottom: 1rem;
             font-weight: bold;
-            text-align: center;
-            background-color: transparent;
-            border: none;
-            overflow-y: hidden;
-            resize: none;
+        }
+
+        .lenght-limit {
+            color: gray;
+            text-align: right !important;
+            padding-right: $gap;
+            height: 1rem;
+            font-size: 14px;
+            vertical-align: middle;
         }
     }
 }
 
 .question-embed {
-    height: 42vh;
     width: 100%;
+    height: 43vh;
     z-index: 1;
 
     img {
@@ -92,4 +86,8 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     .question-embed-remove {
         background-color: #ff6b6b;
     }
+}
+
+.question-answers {
+    height: 28vh;
 }
