--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -6,7 +6,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 
 .question {
     width: 96%;
-    height: 15vh;
+    height: 12vh;
     background-color: $question-content-background;
     box-shadow: $box-shadow;
     z-index: 1;
@@ -18,31 +18,33 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
     display: flex;
     flex-direction: row;
 
+    .lenght-limit {
+        color: gray;
+        text-align: right !important;
+        padding-right: $gap;
+        padding-top: $gap;
+        height: 1rem;
+        font-size: 14px;
+        vertical-align: middle;
+    }
+
     .question-content {
         width: 100%;
         display: flex;
         flex-direction: column;
+        margin-left: $gap*3;
 
         .textarea-enter {
             font-size: 18px;
             margin-bottom: 1rem;
             font-weight: bold;
         }
-
-        .lenght-limit {
-            color: gray;
-            text-align: right !important;
-            padding-right: $gap;
-            height: 1rem;
-            font-size: 14px;
-            vertical-align: middle;
-        }
     }
 }
 
 .question-embed {
     width: 100%;
-    height: 43vh;
+    height: 45vh;
     z-index: 1;
 
     img {
