--- a/clients/src/components/multi-choices/panelLeft/PanelLeft.scss
+++ b/clients/src/components/multi-choices/panelLeft/PanelLeft.scss
@@ -67,6 +67,7 @@
         .add-question {
             display: block;
             width: 100%;
+            height: 50px;
             border: none;
             background-color: #04AA6D;
             color: white;
