--- a/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
+++ b/clients/src/components/multi-choices/questionItemPreview/QuestionItemPreview.scss
@@ -23,4 +23,8 @@ $question-item-preview-content-background: #9cdbe0bb;
         height: 5vw;
         cursor: pointer;
     }
+
+    .selected {
+        background-color: #25CCF7 !important;
+    }
 }
