add new question

--- a/clients/src/components/multi-choices/answer/Answer.scss
+++ b/clients/src/components/multi-choices/answer/Answer.scss
@@ -42,6 +42,8 @@ $btn-check-size: 2rem;
             .textarea-enter {
                 font-size: 14px;
                 font-weight: bold;
+                outline: none !important;
+                box-shadow: none !important;
             }
         }
 
