--- a/clients/src/components/multi-choices/question/Question.scss
+++ b/clients/src/components/multi-choices/question/Question.scss
@@ -38,6 +38,8 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             font-size: 18px;
             margin-bottom: 1rem;
             font-weight: bold;
+            box-shadow: none !important;
+            outline: none !important;
         }
     }
 }
