add examinee ui for take a test

--- a/clients/src/components/multi-choices/answer/Answer.scss
+++ b/clients/src/components/multi-choices/answer/Answer.scss
@@ -57,7 +57,7 @@ $btn-check-size: 2rem;
                 font-weight: normal;
                 margin-top: 0;
                 display: inline-block;
-                color: gray;
+                color: rgb(0, 1, 78);
                 width: 100%;
                 padding-right: 5px;
             }
